--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -1,6 +1,5 @@
 <?php
 
-
 use Hyva\Theme\ViewModel\ProductListItem;
 use Hyva\Theme\ViewModel\Wishlist;
 use Hyva\Theme\ViewModel\SvgIcons;
@@ -28,26 +27,25 @@ $imageUrl = $this->helper(Image::class)
 
 ?>
 <article
-    class="z-10 relative flex h-full w-full flex-col items-stretch justify-start text-start"
+    class="z-10 flex h-full w-full flex-col items-stretch justify-start overflow-hidden rounded-xl border-black border-opacity-50 text-start"
     x-data="ProductPage()"
-<?php if (!$isAlpineTemplate) : ?>
-    <div
-        x-data="{}"
-        x-init="
-    () => {
-      $data.setProductPageProps({
-        productId: <?= $id ?>,
-        isScrollingToTop: false,
-      })
-    }
-  "
-    >
-    </div>
 
-<?php endif; ?>
->
+<?php //if (!$isAlpineTemplate) : ?>
+<!--    <div class="hidden"-->
+<!--        x-init="-->
+<!--    () => {-->
+<!--      $data.setProductPageProps({-->
+<!--        productId: --><?php //= $product->getId() ?><!--,-->
+<!--        isScrollingToTop: false,-->
+<!--      })-->
+<!--    }-->
+<!--  "-->
+<!--    >-->
+<!--    </div>-->
+<!---->
+<?php //endif; ?>
+
 <?php if (!$isAlpineTemplate) : // this image is needed to avoid blink in preview on desktop as there, the select variant is shown, not featured image ?>
-    <?php // TODO: Replace with correct image url ?>
     <img
         width="0"
         height="0"
@@ -80,7 +78,6 @@ $imageUrl = $this->helper(Image::class)
                 x-element-transition-src="img"
             >
                 <img
-                    <?php // TODO: Update with real dynamic data ?>
                     src="<?= $imageUrl ?>"
                     alt="<?= $escaper->escapeHtmlAttr($product->getName()) ?>"
                     class="aspect-product h-full w-full object-contain object-center transition-transform md:group-hover:scale-105"
@@ -97,7 +94,7 @@ $imageUrl = $this->helper(Image::class)
 
 <div class="relative mt-4 flex flex-col gap-1">
     <div class="{{ class }} {% if isLarge %}col-span-2 md:col-auto{% endif %} card-product">
-        <article class="z-10 flex h-full w-full flex-col items-stretch justify-start text-start">
+        <article class="z-10 flex h-full w-full flex-col items-stretch justify-start overflow-hidden rounded-xl border-black border-opacity-50 text-start">
             <h2
                 class="w-[calc(100%-40px)] text-md truncate mt-2"
                 <?php if ($isAlpineTemplate) : ?>
@@ -129,7 +126,7 @@ $imageUrl = $this->helper(Image::class)
     </div>
 
     <?php // TODO: Make Quick buy button work ?>
-    <div class="absolute right-0 top-1/2 transform -translate-y-1/2 md:hidden">
+    <div class="absolute right-0 top-1/2 -translate-y-1/2 text-2xl md:hidden">
         <button
             class="text-xl"
             @click.prevent.stop="quickBuy()"
