--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -9,7 +9,7 @@
 
         <referenceContainer name="columns" htmlClass="flex md:items-start" htmlTag="div" />
         <referenceContainer name="main" htmlClass="flex-grow" htmlTag="div" />
-        <move element="columns" destination="product-grid-container" />
+        <move element="preview.content" destination="product-grid-container"/>
         <move element="main" destination="columns" before="-" />
         <move element="page.main.title" destination="category.banner" />
 
