--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/main-content.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/main-content.phtml
@@ -4,6 +4,8 @@ declare(strict_types=1);
 
 use Magento\Framework\View\Element\Template;
 
+/** @var Template $block */
+
 $page_type = $this->getRequest()->getFullActionName();
 $class = match($page_type) {
   'catalog_product_view' => 'md:mt-[89px]',
