--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -21,6 +21,7 @@ $isAlpineTemplate = $block->getData('isAlpineTemplate');
 $showAddToWishlist = $wishlistViewModel->isEnabled();
 $product = $block->getData('product');
 
+
 $imageUrl = $this->helper(Image::class)
     ->init($product, 'product_base_image')
     ->getUrl();
@@ -105,7 +106,7 @@ $imageUrl = $this->helper(Image::class)
 
             <?php // TODO: Make dynamic ?>
             <p class="w-[calc(100%-40px)] truncate text-text-100 contrast-more:text-secondary-700 mt-2">
-                Vendor
+                <?= $product?->getAttributeText('manufacturer') ?>
             </p>
 
             <h2
