INTERNAL-61: update styles to match shopify

--- a/app/code/Satoshi/Theme/view/frontend/templates/custom_404.phtml
+++ b/app/code/Satoshi/Theme/view/frontend/templates/custom_404.phtml
@@ -13,7 +13,7 @@ use Magento\Framework\Escaper;
     <p class="text-[80px] leading-none">
         <?= $block->escapeHtml($block->getNotFoundText()) ?>
     </p>
-    <h1 class="text-2xl">
+    <h1 class="text-2xl text-text-500">
         <?= $block->escapeHtml($block->getNotFoundTitle()) ?>
     </h1>
     <a href="<?= $escaper->escapeUrl($block->getContinueShoppingUrl()) ?>" class="button button--filled-primary">
