--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -16,5 +16,7 @@
         <referenceBlock name="category.description" remove="true" />
         <referenceBlock name="category.image" remove="true" />
         <referenceBlock name="category.cms" remove="true" />
+
+        <referenceBlock name="product_list_toolbar" remove="true" />
     </body>
 </page>
