--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/default-section-title.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/default-section-title.phtml
@@ -1,30 +1,25 @@
 <?php
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
 
 declare(strict_types=1);
 
-/** @var Escaper $escaper */
-/** @var ViewModelRegistry $viewModels */
-
-/** @var ProductPage $productViewModel */
-
 use Hyva\Theme\Model\ViewModelRegistry;
-use Hyva\Theme\ViewModel\ProductPage;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
+use Magento\Framework\View\Element\AbstractBlock;
+
+/** @var ViewModelRegistry $viewModels */
+/** @var AbstractBlock $sectionBlock */
+/** @var Escaper $escaper */
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
-$productViewModel = $viewModels->require(ProductPage::class);
-$product = $productViewModel->getProduct();
+
 
 ?>
-<div x-data="Accordion('true', 300)" x-effect="$store.description.isExpanded = isExpanded"
+
+
+
+<div x-data="Accordion('true', 300)" x-effect="$store.information.isExpanded = isExpanded"
      class="align-start animate-on-transition mb-8 flex flex-col px-4 md:p-0"
 >
     <button class="flex items-center justify-between"
@@ -33,9 +28,8 @@ $product = $productViewModel->getProduct();
             x-ref="AccordionButton"
             :aria-expanded="isExpanded"
     <span class="text-base font-bold leading-tight">
-                <?= $escaper->escapeHtml(__('Description')) ?> /
-                <?= $escaper->escapeHtml($product->getName()) ?>
-            </span>
+        <?= $sectionBlock->getTitle() ? $escaper->escapeHtml($sectionBlock->getTitle()) : '&nbsp;' ?>
+    </span>
     <span x-ref="AccordionIcon" class="button button--outline-secondary icon-button icon-button--size-xs">
         <?= $hyvaicons->renderHtml('chevron-up', 'rotate-180'); ?>
     </span>
@@ -44,7 +38,7 @@ $product = $productViewModel->getProduct();
 
 <script>
     document.addEventListener('alpine:init', () => {
-        Alpine.store('description', {
+        Alpine.store('information', {
             isExpanded: true
         });
     });
