--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/attributes.phtml
@@ -30,7 +30,7 @@ $product = $block->getProduct();
 
 
 <?php if ($attributes = $block->getAdditionalData()): ?>
-    <div x-data="Accordion($store.information.isExpanded, 300)" x-effect="isExpanded = $store.information.isExpanded">
+    <div x-data="Accordion($store.information.isExpanded, 300)" x-effect="isExpanded = $store.information.isExpanded" class="border-black border-b">
         <div x-ref="AccordionPanel" :inert="!isExpanded">
             <div class="mt-3 overflow-hidden text-text-100 contrast-more:text-secondary-700">
                 <div class="table-wrapper max-w-prose overflow-x-auto" id="product-attributes">
