INTERNAL-4: add a preference in di.xml to replace the core Magento\Cms\Block\Page with Satoshi\Theme\Block\CustomCmsPage, and remove padding in page.phtml file

--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_page_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_page_view.xml
@@ -2,15 +2,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceBlock name="page.main.title" remove="true" />
+        <referenceBlock name="page.main.title" remove="true"/>
 
         <referenceContainer name="content">
-            <block class="Satoshi\Theme\Block\CustomCmsPage" name="cms_page" template="Magento_Cms::page.phtml">
-                <arguments>
-                    <argument name="padding_top" xsi:type="number">0</argument>
-                    <argument name="padding_bottom" xsi:type="number">64</argument>
-                </arguments>
-            </block>
+            <referenceBlock name="cms_page" template="Magento_Cms::page.phtml"/>
         </referenceContainer>
     </body>
 </page>
