INTERNAL-4: remove padding top from page.phtml

--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
@@ -10,7 +10,7 @@ $pageTitle = $block->getPage()?->getTitle();
 $pageContent = $block->getPage()?->getContent();
 ?>
 
-<article class="content-wrapper mx-auto pt-6">
+<article class="content-wrapper mx-auto">
     <h1 class="mb-7 text-center text-4xl text-text-500" itemprop="headline"><?= $this->escapeHtml($pageTitle) ?></h1>
 
     <div class="rte animate-on-transition" itemprop="articleBody">
